--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
 	"editor.fontSize": 16,
-	"workbench.colorTheme": "Andromeda Colorizer",
+	"workbench.colorTheme": "GitHub Light",
 	// "editor.defaultFormatter": "esbenp.prettier-vscode",
 	"editor.formatOnSave": true,
 	"prettier.singleAttributePerLine": true,
